<resources>
    <string name="app_name">Work Time Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="action_events">Events</string>
    <string name="start_time">Start time:</string>
    <string name="stop_time">Stop time:</string>
    <string name="diff_time">Diff:</string>
    <string name="over_hours">Over hours:</string>
    <string name="now">Now</string>
    <string name="log">Log</string>
    <string name="over_time">over time</string>
    <string name="under_time">under time</string>
    <string name="logged">Time logged</string>
    <string name="overHours">Over hours: %s</string>
    <string name="diff">Diff: %s</string>
    <string name="date">Date</string>
    <string name="event">Event</string>
    <string name="date_time_set">Set</string>
    <string name="workTime">Work time</string>
    <string name="workTimeSummary">Set your average day work time</string>
    <string name="overTime">Over time</string>
    <string name="overTimeSummary">Set your overtime / undertime</string>

</resources>
